[gd_scene load_steps=6 format=2]

[ext_resource path="res://emgency.gd" type="Script" id=1]
[ext_resource path="res://text_window.tscn" type="PackedScene" id=2]
[ext_resource path="res://text.gd" type="Script" id=3]
[ext_resource path="res://text_embergency.gd" type="Script" id=4]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/驚嘆號.png-506cc96cba45363cbec10aa952dac4f1.stex"

[node name="emergency" type="Sprite"]
script = ExtResource( 1 )

[node name="Button_emergency" type="Button" parent="."]
margin_left = 100.0
margin_top = 24.0
margin_right = 116.0
margin_bottom = 44.0
size_flags_horizontal = 8
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="Button_emergency"]
position = Vector2( 8.52288, 9.45933 )
scale = Vector2( 0.989264, 0.938535 )
texture = SubResource( 1 )

[node name="text_window_emergency" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="text_embergency" type="Sprite" parent="."]
script = ExtResource( 4 )

[node name="text" type="RichTextLabel" parent="text_embergency"]
margin_left = 117.0
margin_top = 33.0
margin_right = 261.0
margin_bottom = 122.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button_emergency" to="text_window_emergency" method="_on_Button_emergency_pressed"]
[connection signal="pressed" from="Button_emergency" to="." method="_on_Button_emergency_pressed"]
